--- a/Vegetables/Areas/admin/Views/HomeAdmin/Index.cshtml
+++ b/Vegetables/Areas/admin/Views/HomeAdmin/Index.cshtml
@@ -4,4 +4,5 @@
     Layout = "~/Areas/admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-@Html.Action("RenderProduct")
+@Html.Partial("_ContentAdmin")
+
