--- a/Vegetables/Areas/admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Vegetables/Areas/admin/Views/Shared/_LayoutAdmin.cshtml
@@ -77,7 +77,7 @@
     <script src="~/Areas/admin/plugins/Chart.js/Chart.min.js"></script>
     <!-- Index js -->
     <script src="~/Areas/admin/script/js/index.js"></script>
-    @*<script src="~/Areas/admin/script/js/main.js"></script>*@
+    <script src="~/Areas/admin/script/js/main.js"></script>
   
 </body>
 </html>
