--- a/Vegetables/Areas/admin/Views/Shared/_SidebarAdmin.cshtml
+++ b/Vegetables/Areas/admin/Views/Shared/_SidebarAdmin.cshtml
@@ -20,8 +20,8 @@
         </li>
 
         <li>
-            <a >
-                <i class="fa-solid fa-users"></i><span>Customer</span>
+            <a  href="#don-dat" id="order">
+                <i class="fa-solid fa-users"></i><span>Order</span>
             </a>
         </li>
 
