--- a/Vegetables/Areas/admin/Views/Shared/_SidebarAdmin.cshtml
+++ b/Vegetables/Areas/admin/Views/Shared/_SidebarAdmin.cshtml
@@ -14,13 +14,13 @@
         </li>
 
         <li>
-            <a href="#san-pham" id="product">
+            <a href="#product" id="product">
                 <i class="fa-solid fa-seedling"></i> <span>Product</span>
             </a>
         </li>
 
         <li>
-            <a  href="#don-dat" id="order">
+            <a  href="#order" id="order">
                 <i class="fa-solid fa-users"></i><span>Order</span>
             </a>
         </li>
@@ -30,19 +30,6 @@
                 <i class="fa-solid fa-bars"></i> <span>Category</span>
             </a>
         </li>
-
-        <li>
-            <a href="#">
-                <i class="fa-solid fa-images"></i> <span>Image product</span>
-            </a>
-        </li>
-
-        <li>
-            <a href="#">
-                <i class="fa-brands fa-blogger"></i> <span>Blog</span>
-            </a>
-        </li>
-
 
 
         <li class="sidebar-header">LABELS</li>
